2006-04-30  James Turner  <james@worldforge.org>

	* Eris/Task.h, Eris/Task.cpp: when a task is deleted, force it to be
	  removed from the prediction set.

2006-04-28  James Turner  <james@worldforge.org>

	* Eris/Task.h: missing newline at end of file for Loooooooonix.

2006-04-28  James Turner  <james@worldforge.org>

	* Eris/Task.cpp, Eris/Task.h: add in initial work on exposing Tasks to
	  clients.
	  
	* Eris/View.h, Eris/View.cpp: for tasks with a defined progress rate,
	  predict their progress during View::update(), as is already done for
	  position prediction.
	  
	* Eris/Entity.cpp, Eris/Entity.h: process the 'tasks' atteribute if 
	  present, and make an array of Task*s available on Entity.

2006-04-26  James Turner  <james@worldforge.org>

	* Eris/Avatar.cpp, Eris/Avatar.h: add ::useStop(), a helper to send an
	  empty use operation, signifying that the current task should be halted.

2006-02-16  Simon Goodall  <simon@simongoodall.co.uk>

	* Eris/Calendar.h: Export secondsPerMinute();

2006-01-29  James Turner  <james@worldforge.org>

	* Eris/Connection.cpp: catch Atlas exceptions which occur during dispatch,
	  and emit an Eris error.
	  
	* Eris/Account.cpp: silence a warning when clients retrieve an incomplete
	  character dictionary from the account.

2006-01-21  James Turner  <james@worldforge.org>

	* Eris/IGRouter.cpp: warn if a sight(action) is received with no FROM set,
	  instead of silently ignoring this case.

2006-01-18  James Turner  <james@worldforge.org>

	* Eris/Avatar.cpp, Eris/Avatar.h, Eris/Entity.h, Eris/Entity.cpp: move
	  getUseOperations() function from Avatar to Entity, which client authors
	  tell me is more natural.
	  
	* test/avatarTest.cpp: update wield test for revised API.

	* Eris/Calendar.h: add extra accessor methods to Calendar, so Simon can
	  calculate dusk and dawn shading as before.

2005-01-04  Al Riddoch  <alriddoch@zepler.org>

	* eris.spec.in: Remove explicit dependency on Atlas-C++06, and let